# android-opencv-opengl-web-clean

./: CMakeLists.txt  README.md  gradlew  gradlew.bat
app/: build.gradle  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native.cpp
app/src/main/java/com/example/opedge/: GLRenderer.kt  GLSurface.kt  ImageUtils.kt  MainActivity.kt  NativeLib.kt
web/: index.html  package.json
web/src/: index.ts
